feat.0075: refactor OrderPaymentSaga pt.02